Fix contrast ration in 'a' css tag.

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-    color: #4862c4;
+    color: #4f7eff;
     text-decoration: none;
     cursor: pointer;
 }
